[package]

name = "hyper"
version = "0.0.1"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.openssl]
openssl = "0.2.2"

[dependencies.mime]
git = "https://github.com/hyperium/mime.rs"

[dependencies.unsafe-any]
git = "https://github.com/reem/rust-unsafe-any"

[dev-dependencies.curl]
git = "https://github.com/carllerche/curl-rust"

[dev-dependencies.http]
git = "https://github.com/chris-morgan/rust-http"

[dependencies.cookie]
git = "https://github.com/alexcrichton/cookie-rs"

[dependencies.time]
time = "0.1.0"

[dependencies.mucell]
git = "https://github.com/chris-morgan/mucell"
